Fix layout bugs

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -24,3 +24,16 @@ select,
 input {
   height: auto !important;
 }
+
+.center {
+  text-align: center;
+}
+
+.center-form {
+  margin: auto;
+}
+
+.form-group {
+  text-align: left;
+  font-weight: bold;
+}
